Services/neon-dashboard/Shared/MainLayout.razor.css
/*-----------------------------------------------------------------------------
// FILE: MainLayout.razor.css
// CONTRIBUTOR: Marcus Bowyer, Simon Zhang
// COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/


.mainlayout {
    margin: 0;
    background: var(--c-bg-dark);
}

.container {
    display: grid;
    grid-template-rows: 1fr auto;
    overflow: hidden;
    height: 100vh;
    width: 100vw;

}

.main {
    grid-row: 1;
    height: 100%;
    border-radius: var(--f1);
    background: var(--c-fg);
    border: 2px solid var(--c-bg-dark);
    height: 94vh;
}

.bottom {
    padding: 0 var(--f3);
    grid-row: 2;
    background: var(--c-bg);
    display: flex;
    justify-content: flex-end;
    color: var(--c-fg);

    width: 100%;
    height: 6vh;
        
}

